# thesis

./: .envrc  .gitignore  .marimo.toml  AGENTS.md  Manifest.toml  Project.toml  README.md  _quarto.yml  config.nix  convert.py  flake.nix  pyproject.toml  ruff.toml  script.sh
nix/default/: shell.nix
nix/julia/: _package.nix  _registry.nix  create.jl  fmt.jl  fmt.nix  shell.nix  update-registry.py
nix/python/: fmt.nix  shell.nix
nix/typst/: fmt.nix  shell.nix
presentations/2025-06-23/: presentation.typ  references.bib
presentations/2026-01-05/: presentation.typ
presentations/2026-03-21/: presentation.typ
reports/2026-01-23/: references.bib  report.typ
reports/2026-03-05/: references.bib  report.typ
simulations/: .gitignore
simulations/1-classical-ddpm/: DDPM.py  trained_diffusion_model_1750600768.pth
simulations/1-classical-ddpm/weights/: trained_diffusion_model.pth  trained_diffusion_model_1750610944.pth
simulations/2-qddpm-py/: QDDPM.py  QDDPM_recreated.py
simulations/2-qddpm-py/data/: 1qubit_backward_process.h5  1qubit_forward_process.h5  2qubit_backward_process.h5  2qubit_forward_process.h5
simulations/2-qddpm-py/data_ti/: 1qubit_backward_process.h5  1qubit_forward_process.h5  2qubit_forward_process.h5
simulations/2-quantum-ddpm/: QDDPM.py  QDDPM_recreated.py
simulations/2-quantum-ddpm/data/: 1qubit_backward_process.h5  2qubit_backward_process.h5  2qubit_forward_process.h5  5qubit_backward_process.h5
simulations/2-quantum-ddpm/data_ti/: 2qubit_backward_process.h5
simulations/3-qml-jl/: notebook.jl  script.sh  sweep.jl
simulations/3-qml-jl/saves/2026-03-06_225642_Adam/: summary.txt
simulations/3-qml-jl/saves/2026-03-06_230210_RAdam/: summary.txt
simulations/3-qml-jl/saves/2026-03-06_230950_AdaBelief/: summary.txt
simulations/3-qml-jl/saves/2026-03-06_231635_AdaBelief/: summary.txt
simulations/3-qml-jl/src/: base.jl  evaluation.jl  forward.jl  losses.jl  model.jl  plotting.jl  types.jl  utils.jl
(+318 files in other folders)
