[project]
name = "thesis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepinv>=0.3.0",
    "marimo>=0.14.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "D", "ERA", "FBT", "INP", "EM", "T20", "PLC0415", "S602", "PLR2004", "PLR1711", "PLR0913", "E501", "N803", "N806", "TRY003"]
