[project]
name = "thesis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cirq>=1.6.1",
    "deepinv>=0.3.0",
    "marimo>=0.14.0",
    "matplotlib>=3.10.8",
    "numpy==2.3.0",
    "pennylane>=0.44.0",
    "pot[backend-torch]>=0.9.6.post1",
    "pylatexenc>=2.10",
    "python-lsp-server>=1.14.0",
    "qiskit>=2.3.0",
    "qutip>=5.2.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tensorcircuit-ng>=1.4.0",
    "torch>=2.7.1",
    "torchvision>=0.24.1",
    "websockets>=16.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "D", "ERA", "FBT", "INP", "EM", "T20", "PLC0415", "S602", "PLR2004", "PLR1711", "PLR0913", "E501", "N803", "N806", "TRY003"]
